Fix positioning and placement of initially invisible items in layouts

Instead of misusing implicitWidth/Height as a storage mechanism in
scenarios where width/height is used for preferred size evaluation,
new members are created to hold this information to prevent incorrect
sizing in mentioned scenario and get rid of blocking signals.

Task-number: QTBUG-57455
Change-Id: I102c45805c4106e5829b17b65c2e247b2381573f
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>